--- a/index.qmd
+++ b/index.qmd
@@ -215,6 +215,7 @@ These slides are at
 openstatsguide is at [openstatsware.org/guide.html](https://openstatsware.org/guide.html)
 
 Discuss with me:
-[linkedin.com/in/danielsabanesbove](https://www.linkedin.com/in/danielsabanesbove/)
 
+- [linkedin.com/in/danielsabanesbove](https://www.linkedin.com/in/danielsabanesbove/)
+- [daniel@rconis.com](mailto:daniel@rconis.com)
 
